conf/etc/iptables
# Generated by iptables-save v1.4.7 on Mon Jan  5 16:34:40 2015
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [211:15245]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p icmp -j ACCEPT 
-A INPUT -i lo -j ACCEPT 
-A INPUT -j REJECT --reject-with icmp-host-prohibited 
-A FORWARD -j REJECT --reject-with icmp-host-prohibited 
COMMIT
# Completed on Mon Jan  5 16:34:40 2015
# Generated by iptables-save v1.4.7 on Mon Jan  5 16:34:40 2015
*nat
:PREROUTING ACCEPT [263:34029]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [17:1349]
:POSTROUTING ACCEPT [17:1349]
-A PREROUTING -p tcp -m tcp --dport 443 -d 172.21.69.34 -j REDIRECT --to-port 8443
-A OUTPUT -p tcp -m tcp --dport 443 -d 172.21.69.34 -j REDIRECT --to-port 8443
# jetty
-A PREROUTING -p tcp -m tcp --dport 80 -d 172.21.69.34 -j REDIRECT --to-port 8089
-A OUTPUT -p tcp -m tcp --dport 80 -d 172.21.69.34 -j REDIRECT --to-port 8089

# varnish
#-A PREROUTING -p tcp -m tcp --dport 80 -d 172.21.69.34 -j REDIRECT --to-port 6081
#-A OUTPUT -p tcp -m tcp --dport 80 -d 172.21.69.34 -j REDIRECT --to-port 6081
COMMIT
# Completed on Mon Jan  5 16:34:40 2015
# Generated by iptables-save v1.4.7 on Mon Jan  5 16:34:40 2015
*mangle
:PREROUTING ACCEPT [378:41070]
:INPUT ACCEPT [378:41070]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [211:15245]
:POSTROUTING ACCEPT [219:15533]
COMMIT
# Completed on Mon Jan  5 16:34:40 2015
